--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,9 +47,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'input_ids': tensor([[ 101, 5604, 1996, 6434, 1012,  102, 5604, 2117, 6251, 1012,  102]]), 'token_type_ids': tensor([[0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1]]), 'attention_mask': tensor([[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]])}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenizer(text=\"Testing the output.\", text_pair=\"Testing second sentence.\", padding = True, truncation=True, return_tensors=\"pt\", return_attention_mask=True, return_token_type_ids=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading builder script: 100%|██████████| 5.20k/5.20k [00:00<00:00, 13.1kB/s]\n",
+      "Downloading readme: 100%|██████████| 3.56k/3.56k [00:00<00:00, 8.42kB/s]\n",
+      "Downloading data: 100%|██████████| 87.3k/87.3k [00:00<00:00, 124kB/s] \n",
+      "Downloading data: 100%|██████████| 93.4k/93.4k [00:00<00:00, 135kB/s] \n",
+      "Downloading data: 100%|██████████| 16.4k/16.4k [00:00<00:00, 49.0MB/s]\n",
+      "Generating train split: 100%|██████████| 4500/4500 [00:00<00:00, 10527.71 examples/s]\n",
+      "Generating test split: 100%|██████████| 4927/4927 [00:00<00:00, 62417.76 examples/s]\n",
+      "Generating validation split: 100%|██████████| 500/500 [00:00<00:00, 48386.14 examples/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset example: \n",
+      "{'sentence_pair_id': 1, 'premise': 'A group of kids is playing in a yard and an old man is standing in the background', 'hypothesis': 'A group of boys in a yard is playing and a man is standing in the background', 'relatedness_score': 4.5, 'entailment_judgment': 0} \n",
+      "{'sentence_pair_id': 2, 'premise': 'A group of children is playing in the house and there is no man standing in the background', 'hypothesis': 'A group of kids is playing in a yard and an old man is standing in the background', 'relatedness_score': 3.200000047683716, 'entailment_judgment': 0} \n",
+      "{'sentence_pair_id': 3, 'premise': 'The young boys are playing outdoors and the man is smiling nearby', 'hypothesis': 'The kids are playing outdoors near a man with a smile', 'relatedness_score': 4.699999809265137, 'entailment_judgment': 1}\n"
+     ]
+    }
+   ],
    "source": [
     "class SemevalDataset(Dataset):\n",
     "    def __init__(self, split=\"train\") -> None:\n",
@@ -76,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,11 +149,100 @@
     "    # The input parameter is a data batch (tuple), and this function packs it into tensors.\n",
     "    # Use tokenizer to pack tokenize and pack the data and its corresponding labels.\n",
     "    # Return the data batch and labels for each sub-task.\n",
+    "    premises = [data_instance[\"premise\"] for data_instance in batch]\n",
+    "    hypothesis = [data_instance[\"hypothesis\"] for data_instance in batch]\n",
+    "    relatedness_scores = [data_instance[\"relatedness_score\"] for data_instance in batch]\n",
+    "    entailment_judgments = [data_instance[\"entailment_judgment\"] for data_instance in batch]\n",
+    "\n",
+    "    input_texts = tokenizer(text=premises, text_pair=hypothesis, padding = True, truncation=True, return_tensors=\"pt\", return_attention_mask=True, return_token_type_ids=True)\n",
+    "\n",
+    "    relatedness_scores=torch.FloatTensor(relatedness_scores)\n",
+    "    entailment_judgments=torch.LongTensor(entailment_judgments)\n",
+    "\n",
+    "    return input_texts, relatedness_scores, entailment_judgments\n",
     "\n",
     "# TODO1-2: Define your DataLoader\n",
-    "dl_train = # Write your code here\n",
-    "dl_validation = # Write your code here\n",
-    "dl_test = # Write your code here"
+    "dl_train = torch.utils.data.DataLoader(dataset=SemevalDataset(split=\"train\"), collate_fn=collate_fn, batch_size=train_batch_size, shuffle=True, num_workers=32) # Write your code here\n",
+    "dl_validation = torch.utils.data.DataLoader(dataset=SemevalDataset(split=\"validation\"), collate_fn=collate_fn, batch_size=validation_batch_size, shuffle=False, num_workers=32)  # Write your code here\n",
+    "dl_test = torch.utils.data.DataLoader(dataset=SemevalDataset(split=\"test\"), collate_fn=collate_fn, batch_size=validation_batch_size, shuffle=False, num_workers=32) # Write your code here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "({'input_ids': tensor([[  101,  2048,  3057,  2024,  5870,  1998,  2060,  3057,  2024,  3666,\n",
+      "          2068,   102,  2045,  2003,  2053,  2611,  5870,  1998,  2045,  2003,\n",
+      "          2053,  2060,  2611,  3666,   102,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0],\n",
+      "        [  101,  1037,  2711,  2003,  6276,  2019, 20949,   102,  1037,  2711,\n",
+      "          2003,  5983,  1037,  3013, 20949,   102,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0],\n",
+      "        [  101,  2048,  2273,  2024,  5559,  2019,  4589, 21298,  2006,  1996,\n",
+      "          5370,   102,  1996,  4589,  5343,  4049,  2003,  8375,  2408,  1996,\n",
+      "          2300,   102,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0],\n",
+      "        [  101,  1996,  2450,  2003,  2025,  5128,  5789,  2006,  1996,  2158,\n",
+      "           102,  1037,  2450,  2003,  4169,  1037,  2158,  1005,  1055,  2227,\n",
+      "           102,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0],\n",
+      "        [  101,  1996,  2317,  6077,  2024,  2559, 16484,  2012,  1996,  2304,\n",
+      "          2222,  8067,   102,  1037,  2304,  8351,  2003,  3061,  2379,  2093,\n",
+      "          2317,  6077,   102,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0],\n",
+      "        [  101,  1037,  2711,  2003,  4147,  1037,  2417,  6598,  1998,  3173,\n",
+      "          1037,  5404,   102,  1996,  2450,  2003,  4147,  1037,  2417,  6598,\n",
+      "          1998,  3173,  1037,  3221,  1999,  2392,  1997,  1996,  2158,  1999,\n",
+      "          1037,  2317,  1056,  1011,  3797,   102],\n",
+      "        [  101,  1037,  2879,  2279,  2000,  2070, 13610,  2015,  1997, 26346,\n",
+      "          2003,  3173,  2242,   102,  1037,  2879,  2003,  3788,  2408,  1037,\n",
+      "          2958,   102,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0],\n",
+      "        [  101,  1037,  2450,  1999,  1037, 20345,  2003,  4815,  1037,  4937,\n",
+      "          2006,  1037, 26834,  2012,  1996,  3509,   102,  1037,  2450,  2003,\n",
+      "          3061,  2012,  1996,  3509,  2007,  1037,  3899,  2006,  1037, 26834,\n",
+      "           102,     0,     0,     0,     0,     0]]), 'token_type_ids': tensor([[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+      "         1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+      "        [0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+      "        [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0,\n",
+      "         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+      "        [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0,\n",
+      "         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+      "        [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0,\n",
+      "         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+      "        [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+      "         1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+      "        [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0,\n",
+      "         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+      "        [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1,\n",
+      "         1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0]]), 'attention_mask': tensor([[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+      "         1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+      "        [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+      "        [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0,\n",
+      "         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+      "        [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0,\n",
+      "         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+      "        [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0,\n",
+      "         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+      "        [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+      "         1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+      "        [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0,\n",
+      "         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+      "        [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+      "         1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0]])}, tensor([3.2000, 3.4000, 3.4000, 3.2000, 3.0000, 3.3000, 1.7000, 3.2000]), tensor([2, 0, 0, 0, 0, 0, 0, 0]))\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(next(iter(dl_train)))"
    ]
   },
   {
