Finished report and submitted the assignment.

--- a/bert_version_improved_2.ipynb
+++ b/bert_version_improved_2.ipynb
@@ -959,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -989,7 +989,7 @@
     "ax[0].set_ylim(0, max(sorted_results_test_df[\"Pred_Rel_Scores\"])+2)\n",
     "ax[0].set_xlabel(\"Index\")\n",
     "ax[0].set_ylabel(\"Relatedness Score\")\n",
-    "ax[0].set_title(\"BERT Multi-Output Weighted Model Results \\n\\n Sorted Relatedness Scores - Groundtruth vs Predictions\")\n",
+    "ax[0].set_title(\"BERT Multi-Output Weighted Model Results - Added Intermediate Linear Layer \\n\\n Sorted Relatedness Scores - Groundtruth vs Predictions\")\n",
     "\n",
     "sns.barplot(data=melted_df, x = \"Label\", y=\"Count\", hue=\"Type\", ax=ax[1], alpha=0.7)\n",
     "ax[1].bar_label(ax[1].containers[0])\n",
