--- a/bert_version_improved_4_more_epochs.ipynb
+++ b/bert_version_improved_4_more_epochs.ipynb
@@ -1344,6 +1344,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Processing results for graphs:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
@@ -1410,7 +1417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1535,16 +1542,13 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "# output_dir = \"./results/bert_multioutput_weighted_3_model_results\"\n",
-    "# batches_loss = pd.read_csv(f\"{output_dir}/batches_loss.csv\").drop(\"Unnamed: 0\", axis=1)\n",
-    "# epoch_val_acc_corr = pd.read_csv(f\"{output_dir}/epoch_val_acc_corr.csv\").drop(\"Unnamed: 0\", axis=1)\n",
     "melted_epoch_val_acc_corr = epoch_val_acc_corr.melt(id_vars=\"epoch\", var_name=\"Type\", value_name=\"Value\")\n",
     "melted_epoch_val_acc_corr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1591,31 +1595,12 @@
     "ax1.tick_params(axis='y', labelcolor=color)\n",
     "ax1.set_ylim(bottom=min(batches_loss[\"agg_loss\"]))\n",
     "\n",
-    "# Create a secondary y-axis for accuracy\n",
-    "# ax2 = ax1.twinx()\n",
-    "# color = 'tab:blue'\n",
-    "# ax2.set_ylabel('Validation Accuracy', color=color)\n",
-    "# sns.lineplot(data=epoch_val_acc_corr, x=epoch_centers, y='accuracy', ax=ax2, color=color, marker='o', linestyle='--', label='Validation Accuracy')\n",
-    "# color = 'tab:green'\n",
-    "# ax2.set_ylabel('Validation Pearson Correlation', color=color)\n",
-    "# sns.lineplot(data=epoch_val_acc_corr, x=epoch_centers, y='pearson_correlation', ax=ax2, color=color, marker='o', linestyle='--', label='Validation Pearson Correlation')\n",
-    "# ax2.tick_params(axis='y', labelcolor=color)\n",
-    "# # ax2.set_ylim(min(epoch_val_acc[\"accuracy\"])-0.05, max(epoch_val_acc[\"accuracy\"])+0.05)\n",
-    "# ax2.set_ylim(min([min(epoch_val_acc_corr[\"pearson_correlation\"]), min(epoch_val_acc_corr[\"accuracy\"])])-0.05, 1)\n",
-    "\n",
-    "# ax2 = ax1.twinx()\n",
-    "# color = 'tab:blue'\n",
-    "# ax2.set_ylabel('Batch Classification Loss', color=color)\n",
-    "# sns.lineplot(data=batches_loss, x=\"global_batch\", y='class_loss', ax=ax2, color=color, label='Batch Classification Loss')\n",
-    "# ax2.tick_params(axis='y', labelcolor=color)\n",
-    "# ax2.set_ylim(min(batches_loss[\"class_loss\"]))\n",
     "\n",
     "ax2=ax[1]\n",
     "# Plot batch loss on the primary y-axis\n",
     "color = 'black'\n",
     "ax2.set_xlabel('Epochs')\n",
     "ax2.set_ylabel('Validation Correlation/Accuracy', color=color)\n",
-    "# sns.lineplot(data=batches_loss, x='global_batch', y='reg_loss', ax=ax2, color=color, alpha=0.7, label='Batch Regression Loss')\n",
     "sns.barplot(data=melted_epoch_val_acc_corr, x=\"epoch\", y=\"Value\", hue=\"Type\", ax=ax2)\n",
     "ax2.tick_params(axis='y', labelcolor=color)\n",
     "ax2.set_ylim(min([min(epoch_val_acc_corr[\"pearson_correlation\"]), min(epoch_val_acc_corr[\"accuracy\"])])-0.05, 1)\n",
@@ -1623,14 +1608,10 @@
     "ax3=ax[2]\n",
     "\n",
     "color = \"black\"\n",
-    "# ax3.set_xlabel('Test Set')\n",
     "ax3.set_ylabel('Test Correlation/Accuracy', color=color)\n",
-    "# sns.lineplot(data=batches_loss, x='global_batch', y='reg_loss', ax=ax3, color=color, alpha=0.7, label='Batch Regression Loss')\n",
     "sns.barplot(data=melted_epoch_test_acc_corr, x=\"set\", y=\"Value\", hue=\"Type\", ax=ax3)\n",
     "ax3.tick_params(axis='y', labelcolor=color)\n",
     "ax3.set_ylim(min([min(test_results_df[\"pearson_correlation\"]), min(test_results_df[\"accuracy\"])])-0.05, 1)\n",
-    "# ax3.bar_label(ax3.containers[0])\n",
-    "# ax3.bar_label(ax3.containers[1])\n",
     "ax3.text(\"Test Set\", ax3.get_ylim()[1] * 0.90, f'Test Set\\nAcc={test_results_df.iloc[0][\"accuracy\"]:.3f}\\nCorr={test_results_df.iloc[0][\"pearson_correlation\"]:.3f}', horizontalalignment='center', color='black')\n",
     "\n",
     "# Add vertical lines and text for epoch boundaries\n",
@@ -1641,32 +1622,39 @@
     "    ax1.axvline(x=boundary, color='gray', linestyle='--', linewidth=1)\n",
     "    ax2.axvline(x=epoch_sep, color='gray', linestyle='--', linewidth=1)\n",
     "    # Add text label for the epoch\n",
+    "    # Too many epochs, so this line was commented out to not clutter the plot\n",
     "    # ax2.text(epoch_align, ax2.get_ylim()[1] * 0.90, f'Epoch {i+1}\\nAcc={epoch_val_acc_corr.iloc[i][\"accuracy\"]:.3f}\\nCorr={epoch_val_acc_corr.iloc[i][\"pearson_correlation\"]:.3f}', horizontalalignment='center', color='black')\n",
     "\n",
-    "# plt.title(\"\")\n",
     "ax1.set_title('BERT Multi-Output Weighted Model Results - Intermediate Linear Layer with Batch 4 and LR 1e-5 - 50 Epochs\\n\\nBatch Aggregated Loss')\n",
     "ax2.set_title('Validation Set \\nRelatedness Scores Correlations & Entailment Judgement Accuracy')\n",
     "ax3.set_title('Test Set \\nRelatedness Scores Correlations & Entailment Judgement Accuracy')\n",
     "fig.tight_layout()\n",
     "plt.savefig(f\"{output_dir}/reg_class_loss_acc_corr_model.png\")\n",
     "\n",
-    "plt.tight_layout()\n",
-    "# plt.show()"
+    "plt.tight_layout()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Saving the results data\n",
     "batches_loss.to_csv(f\"{output_dir}/batches_loss.csv\")\n",
     "epoch_val_acc_corr.to_csv(f\"{output_dir}/epoch_val_acc_corr.csv\")"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Error analysis:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1718,19 +1706,23 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "from collections import Counter\n",
+    "# Matching sentences pairs with results\n",
     "test_data = SemevalDataset(split=\"test\").data\n",
     "test_data_df = pd.DataFrame(test_data)\n",
     "results_test_df = pd.DataFrame({\"Real_Rel_Scores\": real_rel_scores, \"Pred_Rel_Scores\": pred_rel_scores, \"Real_Entail_Classes\": real_entail_classes, \"Pred_Entail_Classes\": pred_entail_classes})\n",
     "results_test_df = pd.concat([test_data_df, results_test_df], axis=1)\n",
     "\n",
+    "# Sorting by real relatedness scores values\n",
     "sorted_results_test_df = results_test_df.sort_values(by=\"Real_Rel_Scores\", ignore_index=True)\n",
     "sorted_results_test_df[\"index\"] = range(0, len(sorted_results_test_df))\n",
     "\n",
+    "# Making the map from number labels to the sentence classes\n",
     "label_map = {0: \"Neutral\", 1: \"Entailment\", 2: \"Contradiction\"}\n",
     "sorted_results_test_df[\"Real_Entail_Classes_Map\"] = sorted_results_test_df[\"Real_Entail_Classes\"].apply(lambda x: label_map[x])\n",
     "sorted_results_test_df[\"Pred_Entail_Classes_Map\"] = sorted_results_test_df[\"Pred_Entail_Classes\"].apply(lambda x: label_map[x])\n",
     "print(sorted_results_test_df.head(5))\n",
     "\n",
+    "# Obtaining the counts of real and predicted classes\n",
     "count_labels_real = Counter(sorted_results_test_df[\"Real_Entail_Classes_Map\"])\n",
     "count_labels_pred = Counter(sorted_results_test_df[\"Pred_Entail_Classes_Map\"])\n",
     "count_labels_real_df = pd.DataFrame({\"Label\": count_labels_real.keys(), \"Groundtruth\": count_labels_real.values()}, columns=[\"Label\", \"Groundtruth\"])\n",
@@ -1738,6 +1730,7 @@
     "count_labels_df = count_labels_real_df.merge(count_labels_pred_df, on=\"Label\")\n",
     "print(count_labels_df)\n",
     "\n",
+    "# Preparing the data to plot\n",
     "melted_df = count_labels_df.melt(id_vars=\"Label\", var_name=\"Type\", value_name=\"Count\")\n",
     "print(melted_df)\n"
    ]
@@ -1753,7 +1746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1774,6 +1767,7 @@
     "import numpy as np\n",
     "sns.set_theme()\n",
     "\n",
+    "# Plotting relatedness scores and judgement entailment real vs predicted\n",
     "fig, ax = plt.subplots(2,1, figsize=(10, 10))\n",
     "fig.dpi = 100\n",
     "\n",
@@ -1797,7 +1791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1815,6 +1809,7 @@
     "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "# Plotting confusion matrix\n",
     "cm = confusion_matrix(sorted_results_test_df[\"Real_Entail_Classes_Map\"], sorted_results_test_df[\"Pred_Entail_Classes_Map\"])\n",
     "disp = ConfusionMatrixDisplay(confusion_matrix=cm, display_labels=[\"Neutral\", \"Entailment\", \"Contradiction\"])\n",
     "disp.plot()\n",
@@ -1826,7 +1821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1848,14 +1843,14 @@
    ],
    "source": [
     "from sklearn.metrics import classification_report\n",
-    "\n",
+    " # Getting classification report from the results\n",
     "report = classification_report(sorted_results_test_df[\"Real_Entail_Classes_Map\"], sorted_results_test_df[\"Pred_Entail_Classes_Map\"])\n",
     "print(report)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2020,12 +2015,12 @@
     }
    ],
    "source": [
-    "sorted_results_test_df.describe()"
+    "sorted_results_test_df.describe() # Statistics of the data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2192,24 +2187,11 @@
     }
    ],
    "source": [
+    "# Sorting for top 5 highest difference between real and predicted relatedness scores\n",
     "sorted_results_test_df[\"Rel_Score_Diff\"] = sorted_results_test_df.apply(lambda row: abs(row.Real_Rel_Scores-row.Pred_Rel_Scores), axis=1)\n",
     "sorted_rel_score_diff_df = sorted_results_test_df.sort_values(by=\"Rel_Score_Diff\", ignore_index=True)\n",
     "sorted_rel_score_diff_df[-5:]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
